# flexberry-markitdown-mcp

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_EN.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  README.md  README_EN.md  install.bat  install.sh  pyproject.toml  roocode-config-examples.json  roocode-config-examples_EN.json  ruff.toml  uninstall.bat  uninstall.sh
.github/workflows/: ci.yml
src/flexberry_markitdown_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_server.py
