[project]
name = "flexberry-markitdown-mcp"
version = "1.0.0"
description = "MCP server for converting files to Markdown using MarkItDown"
readme = "README_EN.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Flexberry Team"}
]
keywords = ["mcp", "markitdown", "conversion", "markdown", "flexberry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "markitdown[all]>=0.0.1a2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
flexberry-markitdown-mcp = "flexberry_markitdown_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Flexberry/flexberry-markitdown-mcp"
Repository = "https://github.com/Flexberry/flexberry-markitdown-mcp.git"
Issues = "https://github.com/Flexberry/flexberry-markitdown-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flexberry_markitdown_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
